metadata/force-app/main/default/objects/ccrz__E_RichContent__c/fields/ccrz__Content__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Content__c</fullName>
    <description>The actual rich content to be displayed on the page.</description>
    <label>Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>