metadata/force-app/main/default/objects/ccrz__E_RichContent__c/fields/ccrz__EffectiveEnd__c.field-meta.xml
<CustomField>
    <fullName>ccrz__EffectiveEnd__c</fullName>
    <description>The last date that this content will be available</description>
    <label>EffectiveEnd</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>